--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,16 @@
 body {
-  padding: 10px;
-  font-family: sans-serif;
+  font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #242336 /*linear-gradient( #48c2c3 50%, #ec2838 98%)*/;
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+html {
+  height: 100%;
+}
+
+#root {
+  height:100%;
 }
